<resources>
    <string name="app_name">Vesta</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="email">E-mail</string>
    <string name="name">Nome</string>
    <string name="number_of_towers">Número de Torres</string>
    <string name="tower_stories">Andares por Torre</string>
    <string name="add">Adicionar</string>
</resources>