<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login.SignupActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="64dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:hint="@string/name"
        android:textColorHint="@color/dark_green"
        app:hintTextColor="@color/dark_green"
        app:boxStrokeColor="@color/dark_green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:hint="@string/email"
        android:textColorHint="@color/dark_green"
        app:hintTextColor="@color/dark_green"
        app:boxStrokeColor="@color/dark_green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="54dp"
        android:hint="@string/password"
        android:textColorHint="@color/dark_green"
        app:hintTextColor="@color/dark_green"
        app:boxStrokeColor="@color/dark_green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_create_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_gravity="end"
        android:text="@string/criar_conta"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/dark_green"/>

</LinearLayout>