<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.condo.CreateCondoActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="64dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:hint="@string/number_of_towers"
        android:textColorHint="@color/dark_green"
        app:hintTextColor="@color/dark_green"
        app:boxStrokeColor="@color/dark_green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_condo_number_towers_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@android:color/transparent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:hint="@string/tower_stories"
        android:textColorHint="@color/dark_green"
        app:hintTextColor="@color/dark_green"
        app:boxStrokeColor="@color/dark_green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_condo_number_stories_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@android:color/transparent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/new_condo_create_condo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/add"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/dark_green"/>

</LinearLayout>